--- a/3DSite/Views/Shared/_Layout.cshtml
+++ b/3DSite/Views/Shared/_Layout.cshtml
@@ -7,12 +7,13 @@
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
+        @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/threejs")
         @Scripts.Render("~/bundles/loaders")
         @Scripts.Render("~/bundles/gameCode")
     </head>
     <body>
-        <header>
+        @*<header>
             <div class="content-wrapper">
                 <div class="float-left">
                     <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
@@ -30,22 +31,12 @@
                     </nav>
                 </div>
             </div>
-        </header>
+        </header>*@
         <div id="body">
-            @RenderSection("featured", required: false)
-            <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
-            </section>
+          @RenderBody()
         </div>
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
-                </div>
-            </div>
-        </footer>
-
-        @Scripts.Render("~/bundles/jquery")
+        
         @RenderSection("scripts", required: false)
     </body>
+        
 </html>
