--- a/3DSite/Views/Home/Index.cshtml
+++ b/3DSite/Views/Home/Index.cshtml
@@ -6,22 +6,12 @@
         width: 100%;
         height: 100%;
     }
-    #UI {
-        top: 0px;
-        width: 100%;
-        height: 100%;
-        text-align: left;
-        color: white;
-        
-    }
-    .shipPos {
-        
-    }
+    
 </style>
 
 <div id= "UI">
-    <span id="shipPosition" class="shipPos">Ship Position</span><br />
-    <span id="cameraPosition">Camera Position</span>
+    <span id="shipPosition"></span><br /><br />
+    <span id="cameraPosition"></span>
     <script src="/Scripts/game.js"></script>
 </div>
 
