--- a/3DSite/Views/Home/Index.cshtml
+++ b/3DSite/Views/Home/Index.cshtml
@@ -1,17 +1,11 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<style>
-    canvas {
-        width: 100%;
-        height: 100%;
-    }
-    
-</style>
-
-<div id= "UI">
-    <span id="shipPosition"></span><br /><br />
-    <span id="cameraPosition"></span>
-    <script src="/Scripts/game.js"></script>
+<div id="container">
+    <div id="UI">
+        <span id="shipPosition"></span><br /><br />
+        <span id="cameraPosition"></span>
+        <script src="/Scripts/game.js"></script>
+    </div>
 </div>
 
