adjusted fullscreeen settings and refactored

--- a/3DSite/Views/Home/Index.cshtml
+++ b/3DSite/Views/Home/Index.cshtml
@@ -4,7 +4,8 @@
 <div id="container">
     <div id="UI">
         <span id="shipPosition"></span><br /><br />
-        <span id="cameraPosition"></span>
+        <span id="cameraPosition"></span><br /><br />
+        <span id="shipTarget"></span>
         <script src="/Scripts/game.js"></script>
     </div>
 </div>
