--- a/3DSite/Views/Shared/_Layout.cshtml
+++ b/3DSite/Views/Shared/_Layout.cshtml
@@ -11,6 +11,16 @@
         @Scripts.Render("~/bundles/threejs")
         @Scripts.Render("~/bundles/loaders")
         @Scripts.Render("~/bundles/gameCode")
+        <style>
+            body {
+                margin: 0;
+            }
+
+            canvas {
+                width: 100%;
+                height: 100%;
+            }
+        </style>
     </head>
     <body>
         <div id="body">
