organized js code files and bundle config

--- a/3DSite/Views/Home/Index.cshtml
+++ b/3DSite/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
         <span id="shipPosition"></span><br /><br />
         <span id="cameraPosition"></span><br /><br />
         <span id="shipTarget"></span>
-        <script src="/Scripts/game.js"></script>
+        <script src="/Scripts/GameClasses/Game.js"></script>
     </div>
 </div>
 
