Fixed Jasmine Tests

--- a/3DSite/Views/Home/SpecRunner.cshtml
+++ b/3DSite/Views/Home/SpecRunner.cshtml
@@ -9,6 +9,7 @@
     <!-- include source files here... -->
     <script type="text/javascript" src="~/Scripts/Loaders/ModelLoader.js"></script>
     <script type="text/javascript" src="~/Scripts/GameClasses/GameObject.js"></script>
+    <script type="text/javascript" src="~/Scripts/GameClasses/PlayerShip.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="~/Scripts/Specs/ModelLoaderSpec.js"></script>
