refactored gameobject and gamescreen classes. Merged mousepicker code into shipcontrols class.

--- a/3DSite/Views/Home/SpecRunner.cshtml
+++ b/3DSite/Views/Home/SpecRunner.cshtml
@@ -14,6 +14,7 @@
     <!-- include spec files here... -->
     <script type="text/javascript" src="~/Scripts/Specs/ModelLoaderSpec.js"></script>
     <script type="text/javascript" src="~/Scripts/Specs/GameObjectSpec.js"></script>
+    <script type="text/javascript" src="~/Scripts/Specs/PlayerShipSpec.js"></script>
 
     <script type="text/javascript">
         jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
