--- a/3DSite/Views/Home/Index.cshtml
+++ b/3DSite/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 <div id="container">
     <div id="UI">
         <span id="shipPosition"></span><br /><br />
+        <span id="shipRotation"></span><br /><br />
         <span id="cameraPosition"></span><br /><br />
         <span id="shipTarget"></span>
         <script src="/Scripts/GameClasses/Game.js"></script>
